tests/reject/const_expr_divzero.ty
# const int division by zero is a compile error (folded at compile time)
const B = 5 / 0

fn main():
    println(str(B))
